# tutorial-python-poetry

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
gptool/: main.py
src/gptool/: main.py
tests/: gptool.test.py
